# ml_2022

./: 11_901_Кузоватов_1.ipynb  11_901_Кузоватов_10.ipynb  11_901_Кузоватов_10_2.ipynb  11_901_Кузоватов_2.ipynb  11_901_Кузоватов_3.ipynb  11_901_Кузоватов_4.ipynb  11_901_Кузоватов_5.ipynb  11_901_Кузоватов_6.ipynb  11_901_Кузоватов_7.ipynb  11_901_Кузоватов_8.ipynb  11_901_Кузоватов_9.ipynb  bus.json  knn_test.py  pyproject.toml
