[tool.poetry]
name = "machine-learning"
version = "1.0.0"
description = "Machine learning project"
authors = ["sudden_appearance <kuz.damir.01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pygame = "^2.1.2"
sklearn = "^0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
